force-app/main/default/objects/XFILES__Topic__c/XFILES__Topic__c.object-meta.xml
<CustomObject>
    <description>This object used to keep only temporary data. which we can auto sync.</description>
    <label>Topic</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Topic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>