force-app/main/default/objects/XFILES__Topic__c/fields/XFILES__Account_Id__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Topics</relationshipLabel>
    <relationshipName>Topics</relationshipName>
    <type>Lookup</type>
</CustomField>