force-app/main/default/objects/XFILES__Topic__c/fields/XFILES__Folder__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Folder__c</fullName>
    <inlineHelpText>Folder structure for Auto Sync</inlineHelpText>
    <label>Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>