force-app/main/default/objects/XFILES__Topic__c/fields/XFILES__Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Provider_Type__c</fullName>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amazon-S3</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>SkyDrive</fullName>
            </value>
            <value>
                <fullName>GoogleDrive</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>file</fullName>
            </value>
            <value>
                <fullName>ftp</fullName>
            </value>
            <value>
                <fullName>sftp</fullName>
            </value>
            <value>
                <fullName>smb</fullName>
            </value>
            <value>
                <fullName>webdav</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>