force-app/main/default/objects/XFILES__Topic__c/fields/XFILES__Related_Id__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Related_Id__c</fullName>
    <description>Related Record Id</description>
    <inlineHelpText>Related Record Id</inlineHelpText>
    <label>Related Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>