force-app/main/default/objects/XFILES__Topic__c/fields/XFILES__Related_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Related_Object_Type__c</fullName>
    <description>Records belongs to particular objects</description>
    <label>Related Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attachment</fullName>
            </value>
            <value>
                <fullName>ContentVersion</fullName>
            </value>
            <value>
                <fullName>FeedItem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>