force-app/main/default/objects/XFILES__Topic__c/fields/XFILES__Status__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Status__c</fullName>
    <inlineHelpText>Check whether auto sync started or not.</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>